{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 30,
  "lineage": "3876e7ff-7c2d-d4bd-de78-7509864e2801",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:loadbalancer/app/myapp-load-balancer/bf57e359c1687813",
            "arn_suffix": "app/myapp-load-balancer/bf57e359c1687813",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-load-balancer-523532581.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:loadbalancer/app/myapp-load-balancer/bf57e359c1687813",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a1e21212f72f4512"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041739d289a8211a8"
              },
              {
                "subnet_id": "subnet-04456c8d995c997f7"
              }
            ],
            "subnets": [
              "subnet-041739d289a8211a8",
              "subnet-04456c8d995c997f7"
            ],
            "vpc_id": "vpc-0fb399bcd080db728",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "testapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:listener/app/myapp-load-balancer/bf57e359c1687813/e5e5c3a18a359363",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:targetgroup/myapp-tg/fab417ad086c5809",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:listener/app/myapp-load-balancer/bf57e359c1687813/e5e5c3a18a359363",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:loadbalancer/app/myapp-load-balancer/bf57e359c1687813",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.myapp-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "myapp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:targetgroup/myapp-tg/fab417ad086c5809",
            "arn_suffix": "targetgroup/myapp-tg/fab417ad086c5809",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:247280821416:targetgroup/myapp-tg/fab417ad086c5809",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04753758cdfb0fd06",
            "domain": "vpc",
            "id": "eipalloc-04753758cdfb0fd06",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-155-119-176.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.155.119.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003cb020b67054d55",
            "domain": "vpc",
            "id": "eipalloc-003cb020b67054d55",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-75-5-140.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.75.5.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:internet-gateway/igw-0f8f049f82da6d94c",
            "id": "igw-0f8f049f82da6d94c",
            "owner_id": "247280821416",
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04753758cdfb0fd06",
            "connectivity_type": "public",
            "id": "nat-01d0907810da51eca",
            "network_interface_id": "eni-0b518c5d87c8d9646",
            "private_ip": "172.16.2.95",
            "public_ip": "54.155.119.176",
            "subnet_id": "subnet-04456c8d995c997f7"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003cb020b67054d55",
            "connectivity_type": "public",
            "id": "nat-0bd8eee7cb7041510",
            "network_interface_id": "eni-0414838a1ff05486a",
            "private_ip": "172.16.3.57",
            "public_ip": "54.75.5.140",
            "subnet_id": "subnet-041739d289a8211a8"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f8f049f82da6d94c",
            "id": "r-rtb-058eec6f8af0ac3041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058eec6f8af0ac304",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:route-table/rtb-0f71ab104f53fa370",
            "id": "rtb-0f71ab104f53fa370",
            "owner_id": "247280821416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d0907810da51eca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:route-table/rtb-056d5ce9ef487d7d8",
            "id": "rtb-056d5ce9ef487d7d8",
            "owner_id": "247280821416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd8eee7cb7041510",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a293f8835c4012b0",
            "route_table_id": "rtb-0f71ab104f53fa370",
            "subnet_id": "subnet-0005276d2ffe099de"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4cd862918b0c6a",
            "route_table_id": "rtb-056d5ce9ef487d7d8",
            "subnet_id": "subnet-059fde9e20d348ac2"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.test-igw",
            "aws_nat_gateway.test-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:security-group/sg-0a1e21212f72f4512",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1e21212f72f4512",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "247280821416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:security-group/sg-099f3bbdca6509f66",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099f3bbdca6509f66",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1e21212f72f4512"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "247280821416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:subnet/subnet-0005276d2ffe099de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0005276d2ffe099de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247280821416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:subnet/subnet-059fde9e20d348ac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059fde9e20d348ac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247280821416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:subnet/subnet-04456c8d995c997f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04456c8d995c997f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247280821416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:subnet/subnet-041739d289a8211a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041739d289a8211a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247280821416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fb399bcd080db728"
          },
          "dependencies": [
            "aws_vpc.test-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:247280821416:vpc/vpc-0fb399bcd080db728",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0966df4c3c884ba51",
            "default_route_table_id": "rtb-058eec6f8af0ac304",
            "default_security_group_id": "sg-021b9eba1d3285310",
            "dhcp_options_id": "dopt-058d002d9a5364c99",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb399bcd080db728",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058eec6f8af0ac304",
            "owner_id": "247280821416"
          }
        }
      ]
    }
  ]
}